<resources>
    <string name="app_name">ElitePage1</string>

    <string name="txtdes2">ENTER CONTACT DETAILS</string>
    <string name="txtphone">Phone</string>
    <string name="txtaddress">Address</string>
    <string name="txtdes">SELECT THE DRIVER</string>
    <string name="txtdriver1">W.A.Saman Bandara</string>
    <string name="txtdriver2">P.M.Nimal Perera</string>
    <string name="txtdriver3">N.A.Gayan Liyanage</string>
    <string name="txtdriver4">B.S.Bimal Silva</string>
    <string name="txtdes3">W.A.Saman Bandara</string>
    <string name="txtdeliveries">24K | Successful Deliveries</string>
    <string name="txtdes4">Malabe</string>
    <string name="txtname">Name : W.A.Saman Bandara</string>
    <string name="txttime">Available Time : After 10 min</string>
    <string name="txtcontact">Contact Number : 0712121211</string>
    <string name="txtvehicle">Vehicle Number : 6789-BC-98</string>


    <string name="shoppingcartfinal">Shopping Cart</string>
    <string name="chocolatecake">Chocolate Cake</string>
    <string name="chocoquantity">Quantity</string>
    <string name="chocoprice">Price</string>
    <string name="chocoqvalue">1</string>
    <string name="chocopvalue">Rs.300.00</string>
    <string name="chocoremove">Remove Item</string>
    <string name="carrotveg">Carrot</string>
    <string name="carrotquantity">Quantity</string>
    <string name="carrotprice">Price</string>
    <string name="carrotqvalue">2</string>
    <string name="carrotpvalue">Rs.500.00</string>
    <string name="carrotremove">Remove Item</string>
    <string name="finalsubtot">Sub Total</string>
    <string name="finalsubval">Rs.800.00</string>
    <string name="finalconfirm">Confirm and pay</string>

    <string name="shoppingcartremove">Shopping Cart</string>
    <string name="crt">Carrot</string>
    <string name="crtquantity">Quantity</string>
    <string name="crtprice">Price</string>
    <string name="crtqvalue">2</string>
    <string name="crtpvalue">Rs.500.00</string>
    <string name="crtremove">Remove Item</string>
    <string name="subtot">Sub Total</string>
    <string name="subval">Rs.500.00</string>
    <string name="confirm">Confirm and Pay</string>

    <string name="signup">Sign Up</string>
    <string name="welcomesu">Welcome to Elite</string>
    <string name="usernamesu">User Name   *</string>
    <string name="usernamesuval">User Name   *</string>
    <string name="passwordsu">Password   *</string>
    <string name="passwordsuval">Password   *</string>
    <string name="emailsu">Email   *</string>
    <string name="emailsuval">abc@d.com</string>
    <string name="msgsu">By creating an account you agree to our terms of services and privacy policy.</string>
    <string name="btnsignup">Create an Account</string>

    <string name="signin">Sign In</string>
    <string name="welcomesi">Welcome to Elite</string>
    <string name="usernamesi">User Name   *</string>
    <string name="usernamesival">User Name   *</string>
    <string name="passwordsi">Password   *</string>
    <string name="passwordsival">Password   *</string>
    <string name="btnsignin">Sign In</string>


    <string name="buy_btn">Buy</string>
    <string name="buy_header">Apple</string>
    <string name="buy_header1">Rs.250.00</string>
    <string name="buy_header2">1kg</string>
    <string name="buy_header3">Quantity</string>
    <string name="r_btn1">-</string>
    <string name="r_btn2">+</string>
    <string name="buy_header4">2</string>
    <string name="btn_add">ADD TO CART</string>
    <string name="btn_ra">Submit</string>
    <string name="get_rate">RATE</string>
    <string name="suggest_h">Suggest an Item</string>
    <string name="btn_sub">Submit</string>
    <string name="fv_header">Fruit and Vegetable</string>
    <string name="btn1_nav">"Click here to suggest item "</string>


 <!--   <string name="shoppingcartfinal">Shopping Cart</string>
    <string name="chocolatecake">Chocolate Cake</string>
    <string name="chocoquantity">Quantity</string>
    <string name="chocoprice">Price</string>
    <string name="chocoqvalue">1</string>
    <string name="chocopvalue">Rs.300.00</string>
    <string name="chocoremove">Remove Item</string>
    <string name="carrotveg">Carrot</string>
    <string name="carrotquantity">Quantity</string>
    <string name="carrotprice">Price</string>
    <string name="carrotqvalue">2</string>
    <string name="carrotpvalue">Rs.500.00</string>
    <string name="carrotremove">Remove Item</string>
    <string name="finalsubtot">Sub Total</string>
    <string name="finalsubval">Rs.800.00</string>
    <string name="finalconfirm">Confirm and pay</string>

    <string name="shoppingcartremove">Shopping Cart</string>
    <string name="crt">Carrot</string>
    <string name="crtquantity">Quantity</string>
    <string name="crtprice">Price</string>
    <string name="crtqvalue">2</string>
    <string name="crtpvalue">Rs.500.00</string>
    <string name="crtremove">Remove Item</string>
    <string name="subtot">Sub Total</string>
    <string name="subval">Rs.500.00</string>
    <string name="confirm">Confirm and pay</string>

    <string name="signup">Sign Up</string>
    <string name="welcomesu">Welcome to Elite</string>
    <string name="usernamesu">User Name   *</string>
    <string name="usernamesuval">User Name   *</string>
    <string name="passwordsu">Password   *</string>
    <string name="passwordsuval">Password   *</string>
    <string name="emailsu">Email   *</string>
    <string name="emailsuval">abc@d.com</string>
    <string name="msgsu">By creating an account you agree to our terms of services and privacy policy.</string>
    <string name="btnsignup">Create an account</string>

    <string name="signin">Sign In</string>
    <string name="welcomesi">Welcome to Elite</string>
    <string name="usernamesi">User Name   *</string>
    <string name="usernamesival">User Name   *</string>
    <string name="passwordsi">Password   *</string>
    <string name="passwordsival">Password   *</string>
    <string name="btnsignin">Sign In</string>   -->


    <string name="txtdes2">ENTER CONTACT DETAILS</string>
    <string name="txtphone">Phone</string>
    <string name="txtaddress">Address</string>
    <string name="txtdes">SELECT THE DRIVER</string>
    <string name="txtdriver1">W.A.Saman Bandara</string>
    <string name="txtdriver2">P.M.Nimal Perera</string>
    <string name="txtdriver3">N.A.Gayan Liyanage</string>
    <string name="txtdriver4">B.S.Bimal Silva</string>
    <string name="txtdes3">W.A.Saman Bandara</string>
    <string name="txtdeliveries">24K | Successful Deliveries</string>
    <string name="txtdes4">Malabe</string>
    <string name="txtname">Name : W.A.Saman Bandara</string>
    <string name="txttime">Available Time : After 10 min</string>
    <string name="txtcontact">Contact Number : 0712121211</string>
    <string name="txtvehicle">Vehicle Number : 6789-BC-98</string>

    <string name="title_activity_explore">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_btn">btn</string>

    <string name="textar11">ADD NEW ITEAM</string>
    <string name="textar22">Iteam Name</string>
    <string name="textar33">Price per Kg</string>
    <string name="txtar44">category</string>
    <string name="btnregg">Submit</string>
    <string name="btningg">"Choose a Image "</string>
    <string name="btnimgg">Add an Image</string>
    <string name="btnreg">Submit</string>
</resources>